--- a/stylesheet.css/styles.css
+++ b/stylesheet.css/styles.css
@@ -67,6 +67,7 @@ body {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
@@ -111,7 +112,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 50%;
-    background-image: url("./images/Rectangle.png");
+    background-image: linear-gradient(to left, #F4F6F9 2%, transparent 80%), url("./images/Rectangle.png");
 }
 
 .experience {
@@ -168,13 +169,14 @@ body {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-    /* .experience h4 {
+    .experience h4 {
         width: 320px;
-    } */
+    }
 
     .experience h3 {
         width: 320px;
@@ -190,6 +192,8 @@ body {
 
     .content2-img {
         width: 100%;
+        background-image: url("./images/Rectangle.png");
+        background-size: auto;
     }
 
 }
