--- a/stylesheet.css/styles.css
+++ b/stylesheet.css/styles.css
@@ -203,7 +203,6 @@ body {
     .content2-img {
         width: 100%;
         background-image: url("./images/Rectangle.png");
-        background-size: auto;
         margin-top: 40px;
     }
 }
@@ -248,13 +247,12 @@ body {
 /* ----------------CSS for desktop content4---------------- */
 
 .content4 {
-    max-height: 735px;
     display: flex;
     flex-direction: column;
     background-color: #00ADEE;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
+    padding: 50px 100px 50px 100px;
 }
 
 .content4 h3 {
@@ -269,11 +267,13 @@ body {
 
 .content {
     display: grid;
-    grid-template-columns: 25% 25% 25%;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
-    gap: 5%;
-    justify-content: center;
-    align-items: center;
+    gap: 50px;
+}
+
+.block {
+    max-width: 100%;
 }
 
 .content p {
@@ -283,4 +283,100 @@ body {
     font-size: 16px;
     line-height: 23px;
     color: #FFFFFF;
+}
+
+/* ----------------CSS for mobile content4---------------- */
+
+@media screen and (max-width: 1000px) {
+    .content {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .content4 {
+        padding: 50px 25px 50px 25px;
+        background-color: #FAFAFA;;
+    }
+
+    .content {
+        grid-template-columns: 1fr;
+    }
+
+    .block {
+        display: flex;
+        width: 311px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content4 h3 {
+        color: #333333;
+    }
+
+    .content4 p {
+        color: #4F4F4F;
+    }
+
+    .svg-icon {
+        fill: #00ADEE;
+    }
+}
+
+/* ----------------CSS for desktop content5---------------- */
+.content5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0px 50px 0px;
+}
+
+.content5 h3 {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 37px;
+    color: #333333;
+    margin-bottom: 60px;
+}
+
+.content5-img {
+    display: flex;
+    gap: 20px;
+}
+
+.content5-img img {
+    width: 90%;
+}
+
+.slider {
+    margin-top: 50px;
+}
+
+/* ----------------CSS for mobile content5---------------- */
+
+@media screen and (max-width: 720px) {
+    .content5-img img {
+        width: 100%;
+    }
+
+    .img1 {
+        display: none;
+    }
+
+    .img2 {
+        display: none;
+    }
+
+    .img4  {
+        display: none;
+    }
+
+    .img5 {
+        display: none;
+    }
+
+    
 }
