--- a/stylesheet.css/styles.css
+++ b/stylesheet.css/styles.css
@@ -377,6 +377,37 @@ body {
     .img5 {
         display: none;
     }
+}
 
-    
+/* ----------------CSS for desktop content5---------------- */
+.content6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0px 50px 0px;
+    background-color: #FAFAFA;
+}
+.content6 h3 {
+    font-family: 'Lato';
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 37px;
+    color: #333333;
+}
+
+.content6img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 40px;
+    margin: 50px 100px 50px 100px;
+}
+
+
+/* ----------------CSS for mobile content6---------------- */
+
+@media screen and (max-width: 720px) {
+    .content6img {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
