--- a/stylesheet.css/styles.css
+++ b/stylesheet.css/styles.css
@@ -379,7 +379,7 @@ body {
     }
 }
 
-/* ----------------CSS for desktop content5---------------- */
+/* ----------------CSS for desktop content6---------------- */
 .content6 {
     display: flex;
     flex-direction: column;
@@ -411,3 +411,95 @@ body {
         flex-wrap: wrap;
     }
 }
+
+/* ----------------CSS for desktop content7---------------- */
+.content7 {
+    background-color: #FFFFFF; 
+    display: flex;
+    width: 100%;
+    padding-bottom: 100px;
+}
+
+.content7-images {
+    width: 50%;
+}
+
+.content7-images img {
+    width: 80%;
+}
+
+.content7-text {
+    width: 50%;
+}
+
+.content7-text h3 {
+    font-family: 'Lato';
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 37px;
+    color: #333333;
+    margin-top: 50px;
+}
+
+.content7-text p {
+    width: 80%;
+    font-family: 'Lato';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: #4F4F4F;
+    margin: 30px 0px 30px 0px;
+}
+
+/* ----------------CSS for mobile content7---------------- */
+
+@media screen and (max-width: 720px) {
+    .content7 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content7-text {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0px;
+        margin-top: 40px;
+        margin-top: 0px;
+    }
+
+    .content7-text>h3 {
+        width: 320px;
+        margin-top: 50px;
+    }
+
+    .content7-text>p {
+        width: 320px;
+    }
+
+    .google-img {
+        margin-left: 10px;
+    }
+
+    .img-cont1 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .sports-images {
+        display: none;
+    }
+
+    .content7-images {
+        width: 100%;
+        margin-top: 30px;
+    }
+}
+
